# flatmachines

./: .gitignore  .speed-kills.conf  AGENTS.md  MACHINES.md  PARALLELIZATION_SPEC.md  README.md  RSA_IMPLEMENTATION_PLAN.md  autoresearch.bench.sh  autoresearch.checks.sh  autoresearch.context.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  dfss_strawman_spec_v1.md  flatagent.d.ts  flatagents-runtime.d.ts  flatmachine.d.ts  plan.md  profile.d.ts  profiles.d.ts  prompt.d.ts  speed-kills  todos.md  todos.txt
sdk/examples/claude_code_adapter/python/: README.md  pyproject.toml  run.sh
sdk/examples/claude_code_adapter/python/src/claude_code_example/: __init__.py  hooks.py  main.py
sdk/examples/codex_cli_adapter/python/: README.md  pyproject.toml  run.sh
sdk/examples/codex_cli_adapter/python/src/codex_cli_example/: hooks.py  main.py
sdk/examples/coding_machine_discord/python/: .gitignore  README.md  build_bundle.sh  install.sh  pyproject.toml  run.sh  test.sh
sdk/examples/coding_machine_discord/python/bundle/: SETUP.md
sdk/examples/coding_machine_discord/python/design/: chat_context_and_history_design.md
sdk/examples/coding_machine_discord/python/schema/: coding_machine_discord.sql
sdk/examples/coding_machine_discord/python/src/tool_use_discord/: __init__.py  debounce.py  discord_api.py  discord_ingress.py  hooks.py  main.py  messages_backend.py  paths.py  responder.py  tools.py
sdk/examples/coding_machine_discord/python/tests/: test_history_logging.py  test_responder_chain_resume.py  test_role_prefix_matrix_integration.py
sdk/examples/coding_machine_discord/python/tests/integration/: README.md  _docker.py  conftest.py  test_debian_build_bundle.py  test_debian_local_install.py  test_debian_remote_install.py
sdk/examples/coding_machine_discord/python/tests/unit/: test_debounce.py  test_discord_ingress.py  test_everyone_bash_restriction.py  test_messages_backend.py  test_responder.py
sdk/examples/dfss_deepsleep/python/: README.md  pyproject.toml  run.sh
sdk/examples/dfss_deepsleep/python/src/flatagent_dfss_deepsleep/: hooks.py  main.py  scheduler_main.py  tree_demo.py
sdk/examples/dfss_deepsleep/python/tests/unit/: _helpers.py  test_hooks.py  test_scheduler_machine.py  test_task_machine.py
sdk/examples/dfss_pipeline/python/: .gitignore  README.md  pyproject.toml  run.sh  test.sh
sdk/examples/dfss_pipeline/python/src/flatagent_dfss_pipeline/: __init__.py  hooks.py  main.py  task_machine.py
sdk/examples/dfss_pipeline/python/tests/integration/: test_dfss_pipeline.py
sdk/examples/dfss_pipeline/python/tests/unit/: _dfss_test_helpers.py  conftest.py
sdk/examples/dynamic_tool_machine/python/: README.md  pyproject.toml  run.sh
sdk/examples/dynamic_tool_machine/python/src/clone_machine/: child_runner.py  invoker.py  main.py  telemetry.py  tools.py
sdk/examples/dynamic_tool_machine/python/test/unit/: test_tools.py
sdk/examples/expert_debate/python/: README.md  pyproject.toml  run.sh
sdk/examples/expert_debate/python/src/expert_debate/: __init__.py  hooks.py  main.py
sdk/examples/expert_debate/python/tests/: conftest.py
sdk/examples/expert_debate/python/tests/integration/: test_codex_cache_wiring.py
sdk/examples/expert_debate/python/tests/unit/: test_hooks_cache_sessions.py
sdk/examples/github_copilot_oauth/python/: README.md  pyproject.toml  run.sh
sdk/examples/github_copilot_oauth/python/src/github_copilot_oauth_example/: __init__.py  main.py
sdk/examples/interpreter_machine/python/: pyproject.toml
sdk/examples/interpreter_machine/python/src/interpreter_machine/: hooks.py  main.py
sdk/examples/openai_codex_oauth/python/: .gitignore  README.md  pyproject.toml  run.sh
sdk/examples/openai_codex_oauth/python/config/: agent.yml  profiles.yml
sdk/examples/openai_codex_oauth/python/tests/: test_codex_oauth_example.py
sdk/examples/openai_codex_oauth/python/tests/unit/: test_main_cli.py  (+3 more)
sdk/examples/python_template/python/: README.md  pyproject.toml  run.sh
sdk/examples/python_template/python/tests/: test_mock_provider.py  test_template_run.py
sdk/examples/tool_loop/python/: README.md  pyproject.toml  run.sh
sdk/python/examples/webhook_action/: .gitignore  README.md  pyproject.toml  run.sh
sdk/python/examples/webhook_action/config/: analyzer.yml  machine.yml
sdk/python/flatmachines_cli/: CHANGELOG.md  README.md  benchmark.sh  ideas.md  program.md  pyproject.toml  run.sh
sdk/python/flatmachines_cli/config/: profiles.yml  self_improve.yml
sdk/python/flatmachines_cli/config/agents/: agent.yml  analyzer.yml  coder.yml  implementer.yml  parent_selector.yml
sdk/python/flatmachines_cli/docs/: analysis-autoresearch.md  analysis-hyperagents.md  design-improve-init.md  handoff-converged-self-improve.md  handoff-model-parent-selector-no-truncation.md  handoff-outer-loop-gaps.md  handoff-program-md.md
sdk/python/flatmachines_cli/flatmachines_cli/: __init__.py  archive.py  backend.py  bus.py  discovery.py  evaluation.py  events.py  experiment.py  frontend.py  hooks.py  improve.py  inspector.py  isolation.py  main.py  processors.py  protocol.py  repl.py
sdk/python/flatmachines_cli/tests/: conftest.py  test_action_handler.py  test_action_handler_advanced.py  test_api_contract.py  test_backend.py  test_backend_dispatch.py  test_backend_shutdown.py  test_bus.py  test_bus_advanced.py  test_bus_diff.py  test_bus_persistence.py  test_bus_slot_names.py  test_bus_subscribe.py  test_cli_subcommands.py  test_complete_coverage.py  test_concurrency.py  test_converged_self_improve.py  test_defensive_access.py  test_discovery.py  test_discovery_advanced.py  test_discovery_comprehensive.py  test_edge_cases.py  test_end_to_end.py  test_error_paths.py  test_event_field_naming.py  test_events.py  test_events_advanced.py  test_experiment.py  test_experiment_confidence.py  test_experiment_git.py  test_final_coverage.py  test_frontend.py  test_frontend_advanced.py  test_frontend_rendering.py  test_frontend_tools_render.py  test_health_check.py  test_hooks.py  test_hooks_advanced.py  test_hooks_timing.py  test_human_review.py  (+41 more)
(+876 files in other folders)
