[project]
name = "tool_use_discord"
version = "0.1.0"
description = "Coding machine (copied from coding_machine_cli) with Discord queue ingress/debounce/respond"
dependencies = ["flatmachines[flatagents]", "flatagents[litellm]", "requests>=2.31.0"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
tool-use-discord = "tool_use_discord.main:main"
