[project]
name = "clone_machine"
version = "0.1.0"
description = "Clone machine example: generate native tool, launch child in subprocess"
dependencies = ["flatmachines[flatagents]", "flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
clone-machine = "clone_machine.main:main"
