[project]
name = "openai-codex-oauth-example"
version = "0.1.0"
description = "Standalone OpenAI Codex OAuth vertical slice for FlatAgents"
requires-python = ">=3.10"
dependencies = [
    "flatagents",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
openai-codex-oauth-demo = "openai_codex_oauth_example.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_codex_oauth_example"]
