[project]
name = "openai_codex_oauth_example"
version = "0.1.0"
description = "OpenAI Codex OAuth example"
dependencies = ["flatagents"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
openai-codex-oauth-demo = "openai_codex_oauth_example.main:main"
