[project]
name = "python-template"
version = "0.1.0"
description = "FlatMachines Python template: sequence + fan-out with SQLite persistence"
dependencies = ["flatmachines[flatagents]", "flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
python-template = "python_template.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
