[project]
name = "webhook_action"
version = "0.1.0"
description = "Webhook action example for FlatAgents"
dependencies = ["flatagents[litellm]", "httpx>=0.27.0"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
webhook-action-demo = "webhook_action.main:main"
